################################################################################
# This is the CMakeLists file for generate each example.
#
# Its main goals are:
#   - Add examples subdirectories.
#
################################################################################


################################################################################
# Add examples
################################################################################

# Add subdirectories
add_subdirectory(router)
